--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -1,7 +1,7 @@
 @inproceedings{ mcts_tpami ,
   title = {{MCTS with Refinement for Proposals Selection Games in Scene Understanding}},
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
-  booktitle = Submission TPAMI Special Section on the Best Papers of ICCV2021,
+  booktitle = Submission TPAMI,
   year = 2022,
   pdf = {https://arxiv.org/abs/2207.03204}, 
   project = {https://github.com/vevenom/MonteScene}
