--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -1,9 +1,10 @@
 @inproceedings{ mcts_tpami ,
   title = {{MCTS with Refinement for Proposals Selection Games in Scene Understanding}},
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
-  booktitle = Submission TPAMI,
+  booktitle = Submission TPAMI Special Section on the Best Papers of ICCV2021,
   year = 2022,
   pdf = {https://arxiv.org/abs/2207.03204}, 
+  img = {images/paper_thumbnails/mcts_tpami.png},
   project = {https://github.com/vevenom/MonteScene}
 }
 
