--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -1,6 +1,7 @@
 @inproceedings{ mcts_tpami ,
   title = {{MCTS with Refinement for Proposals Selection Games in Scene Understanding}},
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), Computer Science and Game Theory (cs.GT), FOS: Computer and information sciences, FOS: Computer and information sciences},
   booktitle = Submission TPAMI Special Section on the Best Papers of ICCV2021,
   year = 2022,
   pdf = {https://arxiv.org/abs/2207.03204}, 
