--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -3,7 +3,7 @@
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
   keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), Computer Science and Game Theory (cs.GT), FOS: Computer and information sciences, FOS: Computer and information sciences},
   booktitle = {arXiv},
-  booktitle = {arXiv2},
+  publisher = {arXiv2},
   year = 2022,
   pdf = {https://arxiv.org/abs/2207.03204}, 
   img = {images/paper_thumbnails/mcts_tpami.png},
