--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -2,12 +2,12 @@
   title = {{MCTS with Refinement for Proposals Selection Games in Scene Understanding}},
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
   keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), Computer Science and Game Theory (cs.GT), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  booktitle = {arXiv},
-  publisher = {arXiv2},
+  journal = PAMI,
   year = 2022,
   pdf = {https://arxiv.org/abs/2207.03204}, 
   img = {images/paper_thumbnails/mcts_tpami.png},
-  project = {https://github.com/vevenom/MonteScene}
+  project = {https://github.com/vevenom/MonteScene},
+  note = {Accepted}
 }
 
 %% 1999 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
