--- a/list_of_publications.bib
+++ b/list_of_publications.bib
@@ -1,4 +1,4 @@
-@inproceedings{ mcts_tpami ,
+@article{ stekovic_pami22 ,
   title = {{MCTS with Refinement for Proposals Selection Games in Scene Understanding}},
   author = {Stekovic, Sinisa and Rad, Mahdi and Moradi, Alireza and Fraundorfer, Friedrich and Lepetit, Vincent},
   keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), Computer Science and Game Theory (cs.GT), FOS: Computer and information sciences, FOS: Computer and information sciences},
